spacing fixes for above-the-fold enjoyment

--- a/app/assets/stylesheets/partials/_seovideo.scss
+++ b/app/assets/stylesheets/partials/_seovideo.scss
@@ -143,7 +143,7 @@ p {
 
 .seovideo-wrapper {
   margin: 0 auto;
-  max-width:$seo-column-main;
+  max-width: $seo-column-main;
 }
 
 //------------------------------------------------------------------------------
@@ -155,8 +155,7 @@ p {
 
 .seovideo {
   max-width: $seo-column-left;
-  // max-width: 640px;
-  margin: 2em auto;
+  margin: 1.5em auto 0.5em;
 }
 
 .seovideo__head {
@@ -238,7 +237,7 @@ p {
 
   .seovideo__h1 {
     line-height: 2;
-    margin-bottom: 0.5em;
+    margin: 0.4em 0 0;
   }
 
   .seovideo__h4 {
@@ -331,10 +330,11 @@ p {
 }
 
 .seovideo-social-button {
-         width: 100%;
-         display: block;
-         text-align: right;
-         height: 25px;}
+  width: 100%;
+  display: block;
+  text-align: right;
+  height: 25px;
+}
 
 #disqus_thread{
   float: left;
